<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OA_petPic"
    android:padding="10dp"
    android:orientation="vertical"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepTitle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepCount12"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/take_a_picture_of_your_pet"
        android:layout_weight="7"
        android:gravity="center"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        app:cardCornerRadius="15dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:id="@+id/photo"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="10"
        android:layout_weight="12">
        <Button
            android:id="@+id/openCamera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="11sp"
            android:text="@string/open_camera"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/openGallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="11sp"
            android:text="@string/from_gallery"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="30"
        android:gravity="bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detected_color"
            android:gravity="center"/>
        <TextView
            android:id="@+id/colorShow"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/grey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_sure_the_object_is_close_to_the_camera_for_the_best_result"
            android:gravity="center"/>
        <Button
            android:id="@+id/toStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>